--- a/MyPodCastApp/Search/Search.storyboard
+++ b/MyPodCastApp/Search/Search.storyboard
@@ -11,19 +11,56 @@
         <!--Search-->
         <scene sceneID="crq-dT-RPf">
             <objects>
-                <tableViewController id="flH-BU-LW7" sceneMemberID="viewController">
+                <tableViewController id="flH-BU-LW7" customClass="SearchViewController" customModule="MyPodCastApp" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="x5v-G1-sIc">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="SearchResultCell" id="BzA-Jt-HPR" customClass="SearchResultCell" customModule="MyPodCastApp" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="SearchResultCell" rowHeight="94" id="BzA-Jt-HPR" customClass="SearchResultCell" customModule="MyPodCastApp" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="94"/>
                                 <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="BzA-Jt-HPR" id="ArY-rJ-zYf">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="BzA-Jt-HPR" id="ArY-rJ-zYf">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="93.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1fE-FY-pF9">
+                                            <rect key="frame" x="12" y="10.5" width="74" height="74"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="74" id="5l0-48-THJ"/>
+                                                <constraint firstAttribute="height" constant="74" id="Gfn-3e-iI6"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ELI-6V-jHd">
+                                            <rect key="frame" x="101" y="37" width="250" height="17"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QPr-NF-YhR">
+                                            <rect key="frame" x="101" y="14.5" width="250" height="20.5"/>
+                                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="ELI-6V-jHd" firstAttribute="leading" secondItem="QPr-NF-YhR" secondAttribute="leading" id="Lqk-6q-Lf2"/>
+                                        <constraint firstItem="QPr-NF-YhR" firstAttribute="leading" secondItem="1fE-FY-pF9" secondAttribute="trailing" constant="15" id="WCC-rt-yvY"/>
+                                        <constraint firstItem="ELI-6V-jHd" firstAttribute="width" secondItem="QPr-NF-YhR" secondAttribute="width" id="Wtk-LC-C7M"/>
+                                        <constraint firstAttribute="bottom" secondItem="1fE-FY-pF9" secondAttribute="bottom" constant="10" id="dyF-J3-waP"/>
+                                        <constraint firstItem="1fE-FY-pF9" firstAttribute="leading" secondItem="ArY-rJ-zYf" secondAttribute="leading" constant="12" id="hBQ-42-O6q"/>
+                                        <constraint firstItem="ELI-6V-jHd" firstAttribute="firstBaseline" secondItem="QPr-NF-YhR" secondAttribute="baseline" constant="24" symbolType="layoutAnchor" id="hs7-fX-QCV"/>
+                                        <constraint firstItem="QPr-NF-YhR" firstAttribute="top" secondItem="ArY-rJ-zYf" secondAttribute="top" constant="14" id="qeq-yT-Iia"/>
+                                        <constraint firstItem="1fE-FY-pF9" firstAttribute="top" secondItem="ArY-rJ-zYf" secondAttribute="top" constant="10" id="vFz-02-1tX"/>
+                                        <constraint firstAttribute="trailing" secondItem="QPr-NF-YhR" secondAttribute="trailing" constant="24" id="yyI-ZN-mS2"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="artworkImageView" destination="1fE-FY-pF9" id="9U0-JW-7a2"/>
+                                    <outlet property="podcastAuthorLabel" destination="ELI-6V-jHd" id="zyX-yg-Eql"/>
+                                    <outlet property="podcastTitleLabel" destination="QPr-NF-YhR" id="0EK-aD-rle"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -35,7 +72,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JVw-n6-Ocx" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1034" y="793"/>
+            <point key="canvasLocation" x="1032.8" y="792.95352323838085"/>
         </scene>
         <!--Search-->
         <scene sceneID="Sd7-bG-3Jp">
